# cle-sh

./: .gitignore  LICENSE  README.md  analysis.py  clesh.py  comprehension.py  data_learning.py  pyproject.toml
config/: test.json
samples_for_demo/BC/data/: features.csv  performance.txt  pred.npy  pred_prob.npy  shap.npy
samples_for_demo/DR/data/: features.csv  performance.txt  pred.npy  pred_prob.npy  shap.npy
samples_for_demo/HF/data/: features.csv  performance.txt  pred.npy  pred_prob.npy  shap.npy
samples_for_demo/IBD/data/: features.csv  performance.txt  pred.npy  pred_prob.npy  shap.npy
samples_for_demo/MS/data/: features.csv  performance.txt  pred.npy  pred_prob.npy  shap.npy
script/: test_HF.sh  test_MS.sh  test_default.sh
src/: analysis.py  clesh.py  comprehension.py  learning.py
src/clesh/: __init__.py  analyzer.py  config.py  explainer.py  report.py  report_generator.py  visuals.py
src/clesh/cli/: __init__.py  cli_analyze.py  cli_report.py
src/preprocess/: HF.py  MS.py  default.py
