[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clesh"
version = "1.0.0"
description = "Comprehensive Literal Explanation Package for SHapley Values by Statistical Validity"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "LICENSE"}
authors = [
    {name = "Kyungjin Kim"},
    {name = "Youngro Lee"},
    {name = "Jongmo Seo"}
]
maintainers = [
    {name = "Kyungjin Kim", email = "kkj_james@snu.ac.kr"}
]
keywords = ["shap", "shapley", "explainability", "machine learning", "statistics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
    "scipy>=1.7.0",
    "scikit-learn>=1.0.0",
    "shap>=0.40.0",
    "fpdf2>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.scripts]
clesh-analyze = "clesh.cli.cli_analyze:main"
clesh-report = "clesh.cli.cli_report:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
